increase tap target spacing Fixes #350

--- a/css/dark.css
+++ b/css/dark.css
@@ -115,6 +115,15 @@ h1 {
   color: #ffffff;
   border: 0px;
 }
+/* Increase line spacing on mobile to improve tap target UX */
+li a {
+  line-height:1.8;
+}
+@media (min-width: 60em) {
+  li a {
+    line-height:1.2;
+  }
+}
 a:link {
 	color: #deb903;
 	text-decoration: none;
