--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,15 @@ h1 {
 	background-color: #808080;
 	border: #808080;
 }
+/* Increase line spacing on mobile to improve tap target UX */
+li a {
+  line-height:1.8;
+}
+@media (min-width: 60em) {
+  li a {
+    line-height:1.2;
+  }
+}
 a:link {
 	color: #deb903;
 	text-decoration: none;
